# django-api-base

./: .gitignore  README.md  buildspec.yml  pyproject.toml
apibase/: actions.py  archives.py  consumers.py  fields.py  filters.py  paginations.py  permissions.py  renderers.py  requests.py  routers.py  schema.py  serializers.py  storages.py  tests.py  urls.py  urn.py  utils.py  views.py  viewsets.py
apibase/contrib/: models.py
apibase/contrib/models/: __init__.py  methods.py  models.py
apibase/contrib/schema/: __init__.py  filters.py  query.py  utils.py
apibase/graphql/: connections.py  encoders.py  fields.py  mixins.py  models.py  nodes.py  utils.py
apibase/meta/: serializers.py  urls.py  viewsets.py
apibase/settings/: __init__.py  settings.py
apibase/tests/: __init__.py  factories.py  tests.py
docker/: Dockerfile  README.md
tests/: test_apibase.py
