[tool.poetry]
name = "apibase"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]

[tool.poetry.dependencies]
python = "^3.8"
graphene-django = "^2.10.1"
django-cors-headers = "^3.3.0"
djangorestframework-filters = {git = "https://github.com/philipn/django-rest-framework-filters.git"}
django-filter = "^2.2.0"
djangorestframework = "^3.11.0"
gql = "^2.0.0"
django-channels-graphql-ws = "^0.7.4"
jaconv = "^0.2.4"
djangorestframework-csv = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.3"
black = "^21.7b0"
flake8-black = "^0.2.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 119
multi_line_output = 3

[tool.flake8]
max-line-length = 119
extend-ignore = "E203,W503,W504"
per-file-ignores = "web/costs/reports/__init__.py: F401"
exclude = "migrations"

